2002-08-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/tuplet-properties.ly (texidoc): bugfix

	* input/regression/beam-shortened-lengths.ly: add \stemUp

	* Documentation/user/refman.itely: 

2002-08-22  Tom Cato

        * Documentation/user/refman.itely: spelling fix.

2002-08-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths): Prepend dirs to search path, instead
	of appending.  Fixes build when typical LilyPond 1.4 leftovers clutter
	the system.

	* flower/include/file-path.hh (prepend): New function.

2002-08-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/misc/ChangeLog-1.5: move 1.5 ChangeLog to misc/

	* lily/completion-note-heads-engraver.cc (class
	Completion_heads_engraver): don't be confused by polyphonic rhythms.

	* input/regression/completion-heads-polyphony.ly: new file.

2002-08-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* GNUmakefile.in (web-ext): distribute .ly with web tarball too.
	This means that the 1.6 binaries must be rebuilt.

	* make/lilypond-vars.make: banish ps-to-X scripts

	* make/generic-rules.make: remove blurb rule.

	* GNUmakefile.in: make lilypond-fource file, so PK fonts are not
	removed every make-run.
 
	* make/ly-rules.make: don't remove .tely file.

	* input/test/chords.ly (scales): whole notes only. Prevents
	weird breaks.
