@@ -104,6 +104,8 @@ SCM ly_write2scm (SCM s);
 SCM ly_deep_copy (SCM);
 SCM ly_truncate_list (int k, SCM l );
 
+#define CACHE_SYMBOLS
+
 
 #if (__GNUC__ > 2)
 /*
